update benchmarking notebook

--- a/sparse-tensors-gpu/train-with-exodus.ipynb
+++ b/sparse-tensors-gpu/train-with-exodus.ipynb
@@ -31,20 +31,18 @@
    "source": [
     "from tonic import transforms\n",
     "\n",
-    "dt = 4000 # all time units in Tonic in us\n",
+    "dt = 4000  # all time units in Tonic in us\n",
     "encoding_dim = 100\n",
     "\n",
-    "dense_transform = transforms.Compose([\n",
-    "    transforms.Downsample(spatial_factor=encoding_dim/700),\n",
-    "    transforms.CropTime(max=1e6),\n",
-    "    transforms.ToFrame(sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True),\n",
-    "])\n",
-    "\n",
-    "sparse_transform = transforms.Compose([\n",
-    "    transforms.Downsample(spatial_factor=encoding_dim/700),\n",
-    "    transforms.CropTime(max=1e6),\n",
-    "    transforms.ToSparseTensor(sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True),\n",
-    "])"
+    "dense_transform = transforms.Compose(\n",
+    "    [\n",
+    "        transforms.Downsample(spatial_factor=encoding_dim / 700),\n",
+    "        transforms.CropTime(max=1e6),\n",
+    "        transforms.ToFrame(\n",
+    "            sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True\n",
+    "        ),\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -61,11 +59,10 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from tonic import datasets\n",
+    "import tonic\n",
     "\n",
-    "dense_dataset = datasets.SSC('./data', split=\"train\", transform=dense_transform)\n",
-    "sparse_dataset = datasets.SSC('./data', split=\"train\", transform=sparse_transform, target_transform=torch.tensor)\n",
-    "print(f\"This dataset has {len(sparse_dataset)} samples.\")"
+    "dense_dataset = tonic.datasets.SSC(\"./data\", split=\"train\", transform=dense_transform)\n",
+    "print(f\"This dataset has {len(dense_dataset)} samples.\")"
    ]
   },
   {
@@ -84,10 +81,22 @@
     "dense_sample, dense_target = dense_dataset[0]\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.imshow(dense_sample.squeeze().T)\n",
     "plt.xlabel(\"Time step\")\n",
     "plt.ylabel(\"Channel\")\n",
     "plt.title(dense_dataset.classes[dense_target]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naïve dataloading\n",
+    "\n",
+    "We start with the first benchmark, where we load every sample from an hdf5 file on disk which provides us with a numpy array in memory. For each sample, we apply the [ToFrame](https://tonic.readthedocs.io/en/main/reference/generated/tonic.transforms.ToFrame.html) transform (defined earlier) to create a dense array which we can then batch together with other samples and feed it to the network.\n",
+    "\n",
+    "![naive caching](images/caching1.png \"Naive caching\")\n"
    ]
   },
   {
@@ -96,9 +105,221 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tonic\n",
+    "from tqdm.notebook import tqdm\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "dataloader_kwargs = dict(\n",
+    "    batch_size=128,\n",
+    "    shuffle=True,\n",
+    "    drop_last=True,\n",
+    "    pin_memory=True,\n",
+    "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
+    ")\n",
+    "\n",
+    "naive_dataloader = DataLoader(dense_dataset, **dataloader_kwargs, num_workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for data, target in tqdm(naive_dataloader):\n",
+    "    data, target = data.squeeze().cuda(), target.cuda()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's about 11-12 iterations/s, which is not very exciting. We haven't even started training yet! \n",
+    "\n",
+    "## Disk caching\n",
+    "Let's try to be a bit smarter now. ToFrame is a deterministic transform, so for the same sample we'll always receive the same transformed data. Given that we might train for 100 epochs, which looks at each sample 100 times, that's a lot of wasted compute! Now we're going to cache, which means save, those transformed sampled to disk during the first epoch, so that we don't need to recompute them!\n",
+    "\n",
+    "![Disk caching](images/caching2.png \"Disk caching\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disk_cached_dataset = tonic.DiskCachedDataset(\n",
+    "    dataset=dense_dataset,\n",
+    "    cache_path=f\"cache/{dense_dataset.__class__.__name__}/train/{encoding_dim}/{dt}\",\n",
+    ")\n",
+    "\n",
+    "disk_cached_dataloader = DataLoader(disk_cached_dataset, **dataloader_kwargs, num_workers=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for data, target in tqdm(disk_cached_dataloader):\n",
+    "    data, target = data.squeeze().cuda(), target.cuda()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8-9 iterations/s is slower than before, what happened? In the first epoch, the caching will likely slow down the training. But let's see what happens in the second epoch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data, target in tqdm(disk_cached_dataloader):\n",
+    "    data, target = data.squeeze().cuda(), target.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cProfile\n",
+    "cProfile.run(\"next(iter(disk_cached_dataloader))\", sort='cumulative')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "64 iterations/s? Now this is faster! Every epoch from now on will load data at this speed, at the expense of disk space. How much disk space does it cost you may ask? Let's compare the size of the original dataset and the cache folder..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "size_orig_dataset = (\n",
+    "    sum(f.stat().st_size for f in Path(\"data\").glob(\"**/*.h5\") if f.is_file()) / 1e9\n",
+    ")\n",
+    "size_cache_folder = (\n",
+    "    sum(f.stat().st_size for f in Path(\"cache\").glob(\"**/*\") if f.is_file()) / 1e9\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f\"The size of the original dataset file is {round(size_orig_dataset, 2)} GB compared to the generated cache folder with {round(size_cache_folder, 2)} GB.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is quite efficient. As a reminder, the original dataset in this case contained numpy events, whereas the cache folder contains dense tensors. We can compress the dense tensors that much because by default Tonic uses lightweight compression during caching. Disk caching is a generally applicable and will save you a lot of time in the long run.\n",
+    "\n",
+    "## GPU caching\n",
+    "We can even go faster! Instead of caching the data on the disk, we can simply transfer all the data to the GPU! Now, the issue is that with dense tensors this wouldn't work as they would occupy too much memory. But events are already an efficient format right? So we'll convert events to sparse tensors, save all of them on the GPU and then simply inflate them by calling to_dense() for each sample. This method is obviously bound by GPU memory so works with rather small datasets such as then one we're testing. However, once you're setup, you can train with _blazing_ speed. Let's have a look!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_transform = transforms.Compose(\n",
+    "    [\n",
+    "        transforms.Downsample(spatial_factor=encoding_dim / 700),\n",
+    "        transforms.CropTime(max=1e6),\n",
+    "        transforms.ToSparseTensor(\n",
+    "            sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "sparse_dataset = tonic.datasets.SSC(\n",
+    "    \"./data\", split=\"train\", transform=sparse_transform, target_transform=torch.tensor\n",
+    ")\n",
+    "\n",
     "sparse_sample = sparse_dataset[0][0]\n",
     "\n",
     "print(sparse_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_list = []\n",
+    "target_list = []\n",
+    "for data, targets in tqdm(disk_cached_dataloader):\n",
+    "    data_list.append(data.to_sparse().coalesce().cuda().bool())\n",
+    "    target_list.append(targets.byte().cuda())\n",
+    "\n",
+    "sparse_tensor_dataset = list(zip(data_list, target_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data, target in tqdm(sparse_tensor_dataset):\n",
+    "    assert not data.is_sparse and data.device == 'cuda:0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpu_cached_dataset = tonic.MemoryCachedDataset(\n",
+    "    dataset=sparse_dataset,\n",
+    "    device=\"cuda\",\n",
+    "    transform=lambda x: x.to_dense(),\n",
+    ")\n",
+    "\n",
+    "dataloader_kwargs.pop('pin_memory')\n",
+    "gpu_cached_dataloader = DataLoader(gpu_cached_dataset, **dataloader_kwargs, num_workers=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data, target in tqdm(gpu_cached_dataloader):\n",
+    "    assert not data.is_sparse and data.device"
    ]
   },
   {
@@ -118,6 +339,7 @@
     "import sinabs.layers as sl\n",
     "import sinabs.exodus.layers as el\n",
     "\n",
+    "\n",
     "class SNN(nn.Sequential):\n",
     "    def __init__(self, backend, hidden_dim: int = 128):\n",
     "        assert backend == sl or backend == el\n",
@@ -131,126 +353,16 @@
     "            nn.Linear(hidden_dim, 35),\n",
     "        )\n",
     "\n",
+    "\n",
     "sinabs_model = SNN(backend=sl).cuda()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We start with the first benchmark, where we load every sample from an hdf5 file on disk which provides us with a numpy array in memory. For each sample, we apply the [ToFrame](https://tonic.readthedocs.io/en/main/reference/generated/tonic.transforms.ToFrame.html) transform (defined earlier) to create a dense array which we can then batch together with other samples and feed it to the network.\n",
-    "\n",
-    "![naive caching](images/caching1.png \"Naive caching\")\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sinabs\n",
-    "import tonic\n",
-    "from tqdm.notebook import tqdm\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "dataloader_kwargs = dict(\n",
-    "    batch_size=64,\n",
-    "    num_workers=4,\n",
-    "    shuffle=True,\n",
-    "    drop_last = True,\n",
-    "    pin_memory = True,\n",
-    "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
-    ")\n",
-    "\n",
-    "naive_dataloader = torch.utils.data.DataLoader(\n",
-    "    dense_dataset,  \n",
-    "    **dataloader_kwargs\n",
-    ")\n",
-    "\n",
-    "def train_step(data: torch.Tensor, target: torch.Tensor):\n",
-    "    data, target = data.squeeze().cuda(), target.cuda()\n",
-    "    sinabs.reset_states(sinabs_model)\n",
-    "    output = sinabs_model(data)\n",
-    "    F.cross_entropy(output.sum(1), target).backward()\n",
-    "\n",
-    "for data, target in tqdm(naive_dataloader):\n",
-    "    data, target = data.squeeze().cuda(), target.cuda()\n",
-    "    # train_step(data, target)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's about 11-12 iterations/s, which is not very exciting. Yet, this is what a lot of people work with! Let's try to be a bit smarter now. ToFrame is a deterministic transform, so for the same sample we'll always receive the same transformed data. Given that we might train for 100 epochs, which looks at each sample 100 times, that's a lot of wasted compute! Now we're going to cache, which means save, those transformed sampled to disk during the first epoch, so that we don't need to recompute them!\n",
-    "\n",
-    "![Disk caching](images/caching2.png \"Disk caching\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "disk_cached_dataset = tonic.DiskCachedDataset(\n",
-    "            dataset=dense_dataset,\n",
-    "            cache_path=f\"cache/{dense_dataset.__class__.__name__}/train/{encoding_dim}/{dt}\",\n",
-    "        )\n",
-    "\n",
-    "disk_cached_dataloader = torch.utils.data.DataLoader(\n",
-    "    disk_cached_dataset, \n",
-    "    **dataloader_kwargs\n",
-    ")\n",
-    "\n",
-    "for data, target in tqdm(disk_cached_dataloader):\n",
-    "    data, target = data.squeeze().cuda(), target.cuda()\n",
-    "\n",
-    "    # train_step(data, target)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "8-9 iterations/s is slower than before, what happened? In the first epoch, the caching will likely slow down the training. But let's see what happens in the second epoch."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for data, target in tqdm(disk_cached_dataloader):\n",
-    "    data, target = data.squeeze().cuda(), target.cuda()\n",
-    "\n",
-    "    # train_step(data, target)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "64 iterations/s? Now this is faster! Every epoch from now on will load data at this speed, at the expense of disk space. How much disk space does it cost you may ask? Let's compare the size of the original dataset and the cache folder..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
     "# sparse_dataloader = torch.utils.data.DataLoader(\n",
     "#     sparse_dataset,\n",
     "#     num_workers=4,\n",
@@ -263,20 +375,7 @@
     "    cpu_cached_dataset,\n",
     "    batch_size=batch_size,\n",
     "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
-    "    # num_workers=4, \n",
-    "    drop_last=True,\n",
-    "    shuffle=True,\n",
-    ")\n",
-    "\n",
-    "gpu_cached_dataset = tonic.MemoryCachedDataset(\n",
-    "    dataset=sparse_dataset,\n",
-    "    device=\"cuda\",\n",
-    "    transform=lambda x: x.to_dense(),\n",
-    ")\n",
-    "gpu_cached_dataloader = torch.utils.data.DataLoader(\n",
-    "    gpu_cached_dataset,\n",
-    "    batch_size=batch_size,\n",
-    "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
+    "    # num_workers=4,\n",
     "    drop_last=True,\n",
     "    shuffle=True,\n",
     ")"
@@ -303,13 +402,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for data, target in tqdm(gpu_cached_dataloader):\n",
-    "    model.reset_states()\n",
-    "    model.zero_grad()\n",
-    "    output = model(data)\n",
-    "    output.sum().backward()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
