--- a/sparse-tensors-gpu/train-with-exodus.ipynb
+++ b/sparse-tensors-gpu/train-with-exodus.ipynb
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "import tonic\n",
-    "from tqdm.notebook import tqdm\n",
+    "from tqdm import tqdm\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
     "dataloader_kwargs = dict(\n",
@@ -126,7 +126,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "for data, target in tqdm(naive_dataloader):\n",
     "    data, target = data.squeeze().cuda(), target.cuda()"
    ]
@@ -135,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's about 11-12 iterations/s, which is not very exciting. We haven't even started training yet! \n",
+    "That's about 6-7 iterations/s, which is not very exciting. We haven't even started training yet! \n",
     "\n",
     "## Disk caching\n",
     "Let's try to be a bit smarter now. ToFrame is a deterministic transform, so for the same sample we'll always receive the same transformed data. Given that we might train for 100 epochs, which looks at each sample 100 times, that's a lot of wasted compute! Now we're going to cache, which means save, those transformed sampled to disk during the first epoch, so that we don't need to recompute them!\n",
@@ -154,7 +153,7 @@
     "    cache_path=f\"cache/{dense_dataset.__class__.__name__}/train/{encoding_dim}/{dt}\",\n",
     ")\n",
     "\n",
-    "disk_cached_dataloader = DataLoader(disk_cached_dataset, **dataloader_kwargs, num_workers=0)"
+    "disk_cached_dataloader = DataLoader(disk_cached_dataset, **dataloader_kwargs, num_workers=4)"
    ]
   },
   {
@@ -163,7 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "for data, target in tqdm(disk_cached_dataloader):\n",
     "    data, target = data.squeeze().cuda(), target.cuda()"
    ]
@@ -186,20 +184,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cProfile\n",
-    "cProfile.run(\"next(iter(disk_cached_dataloader))\", sort='cumulative')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "64 iterations/s? Now this is faster! Every epoch from now on will load data at this speed, at the expense of disk space. How much disk space does it cost you may ask? Let's compare the size of the original dataset and the cache folder..."
+    "32 iterations/s? Now this is faster! Every epoch from now on will load data at this speed, at the expense of disk space. How much disk space does it cost you may ask? Let's compare the size of the original dataset and the cache folder..."
    ]
   },
   {
@@ -229,7 +217,7 @@
     "This is quite efficient. As a reminder, the original dataset in this case contained numpy events, whereas the cache folder contains dense tensors. We can compress the dense tensors that much because by default Tonic uses lightweight compression during caching. Disk caching is a generally applicable and will save you a lot of time in the long run.\n",
     "\n",
     "## GPU caching\n",
-    "We can even go faster! Instead of caching the data on the disk, we can simply transfer all the data to the GPU! Now, the issue is that with dense tensors this wouldn't work as they would occupy too much memory. But events are already an efficient format right? So we'll convert events to sparse tensors, save all of them on the GPU and then simply inflate them by calling to_dense() for each sample. This method is obviously bound by GPU memory so works with rather small datasets such as then one we're testing. However, once you're setup, you can train with _blazing_ speed. Let's have a look!"
+    "We can even go faster! Instead of loading dense tensors from disk, we can try to cram all our dataset onto the GPU! Now, the issue is that with dense tensors this wouldn't work as they would occupy too much memory. But events are already an efficient format right? So we'll store the events on the GPU as sparse tensors and then simply inflate them by calling to_dense() for each sample. This method is obviously bound by GPU memory so works with rather small datasets such as then one we're testing. However, once you're setup, you can train with _blazing_ speed. Let's have a look!"
    ]
   },
   {
@@ -266,7 +254,7 @@
     "data_list = []\n",
     "target_list = []\n",
     "for data, targets in tqdm(disk_cached_dataloader):\n",
-    "    data_list.append(data.to_sparse().coalesce().cuda().bool())\n",
+    "    data_list.append(data.squeeze().to_sparse().coalesce().cuda())\n",
     "    target_list.append(targets.byte().cuda())\n",
     "\n",
     "sparse_tensor_dataset = list(zip(data_list, target_list))"
@@ -277,56 +265,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for data, target in tqdm(sparse_tensor_dataset):\n",
-    "    assert not data.is_sparse and data.device == 'cuda:0'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpu_cached_dataset = tonic.MemoryCachedDataset(\n",
-    "    dataset=sparse_dataset,\n",
-    "    device=\"cuda\",\n",
-    "    transform=lambda x: x.to_dense(),\n",
-    ")\n",
-    "\n",
-    "dataloader_kwargs.pop('pin_memory')\n",
-    "gpu_cached_dataloader = DataLoader(gpu_cached_dataset, **dataloader_kwargs, num_workers=0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for data, target in tqdm(gpu_cached_dataloader):\n",
-    "    assert not data.is_sparse and data.device"
+    "    data.to_dense()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define our spiking neural network, which is a simple feedforward model with integrate-and-fire (IAF) layers. For the moment we'll use the default Sinabs backend, which is more or less pure PyTorch."
+    "The last line returns instantly... 10k batches/s sound like something we'd like to work with. The dataset now occupies some 8-9GB of GPU memory, which is quite a lot for a dataset of this size. But the speed speaks for itself, so it might pay off to run your experiments on an earlier-generation GPU with more memory just to really crank up that utilisation percentage!\n",
+    "\n",
+    "\n",
+    "## Fast training\n",
+    "So far, all we've done is loading the data on the device. It would be good to see how fast we can really train a network on the task. We'll use again our three dataloaders (naïve version, disk-cached and GPU-cached) to look at actual training times. Let's start by defining a simple integrate-and-fire (IAF) feed-forward (Sequential) architecture using [Sinabs](https://sinabs.readthedocs.io):"
    ]
   },
   {
@@ -344,7 +296,7 @@
     "    def __init__(self, backend, hidden_dim: int = 128):\n",
     "        assert backend == sl or backend == el\n",
     "        super().__init__(\n",
-    "            nn.Linear(100, hidden_dim),\n",
+    "            nn.Linear(encoding_dim, hidden_dim),\n",
     "            backend.IAF(),\n",
     "            nn.Linear(hidden_dim, hidden_dim),\n",
     "            backend.IAF(),\n",
@@ -354,7 +306,7 @@
     "        )\n",
     "\n",
     "\n",
-    "sinabs_model = SNN(backend=sl).cuda()"
+    "sinabs_model = SNN(backend=el).cuda()"
    ]
   },
   {
@@ -363,22 +315,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sparse_dataloader = torch.utils.data.DataLoader(\n",
-    "#     sparse_dataset,\n",
-    "#     num_workers=4,\n",
-    "#     batch_size=None,\n",
-    "# )\n",
-    "cpu_cached_dataset = tonic.MemoryCachedDataset(\n",
-    "    dataset=sparse_dataset,\n",
-    ")\n",
-    "cpu_cached_dataloader = torch.utils.data.DataLoader(\n",
-    "    cpu_cached_dataset,\n",
-    "    batch_size=batch_size,\n",
-    "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
-    "    # num_workers=4,\n",
-    "    drop_last=True,\n",
-    "    shuffle=True,\n",
-    ")"
+    "import sinabs\n",
+    "\n",
+    "# sparse_tensor_dataloader = DataLoader(sparse_tensor_dataset, batch_size=None, num_workers=0)\n",
+    "model = sinabs_model\n",
+    "train_dataloader = disk_cached_dataloader # sparse_tensor_dataloader # sparse_tensor_dataset # \n",
+    "# def training():\n",
+    "optim = torch.optim.Adam(model.parameters())\n",
+    "criterion = torch.nn.functional.cross_entropy\n",
+    "\n",
+    "train_loss = []\n",
+    "for epoch in range(3):\n",
+    "    for data, targets in tqdm(train_dataloader):\n",
+    "        sinabs.reset_states(model)\n",
+    "        optim.zero_grad()\n",
+    "        data = data.cuda().squeeze()\n",
+    "        targets = targets.cuda()\n",
+    "        # data = data.to_dense()\n",
+    "        # targets = targets.to_dense()\n",
+    "        output = model(data)\n",
+    "        loss = criterion(output.sum(1), targets)\n",
+    "        loss.backward()\n",
+    "        optim.step()\n",
+    "        train_loss.append(loss)"
    ]
   },
   {
@@ -387,14 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data, target in tqdm(cpu_cached_dataloader):\n",
-    "    data = data.cuda()\n",
-    "    target = target.cuda()\n",
-    "    data = data.to_dense().float()\n",
-    "    model.reset_states()\n",
-    "    model.zero_grad()\n",
-    "    output = model(data)\n",
-    "    output.sum().backward()"
+    "data.shape"
    ]
   },
   {
@@ -402,7 +354,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "train_loss = [loss.cpu().detach().numpy() for loss in train_loss]\n",
+    "plt.plot(train_loss)"
+   ]
   },
   {
    "cell_type": "code",
@@ -414,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('base')",
+   "display_name": "Python 3.10.8 ('exodus-test')",
    "language": "python",
    "name": "python3"
   },
@@ -428,12 +385,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "caf264bf03997fa53b380c84044763293a7a6f8ebb5555ee5243fd4d1f495be6"
+    "hash": "c021c926ddd302c6ed51a52d37f274a9ee4bffd9f811c11e9a0b313c48b15ad1"
    }
   }
  },
