add figure 3 to fast training notebook

--- a/sparse-tensors-gpu/train-with-exodus.ipynb
+++ b/sparse-tensors-gpu/train-with-exodus.ipynb
@@ -217,7 +217,9 @@
     "This is quite efficient. As a reminder, the original dataset in this case contained numpy events, whereas the cache folder contains dense tensors. We can compress the dense tensors that much because by default Tonic uses lightweight compression during caching. Disk caching is a generally applicable and will save you a lot of time in the long run.\n",
     "\n",
     "## GPU caching\n",
-    "We can even go faster! Instead of loading dense tensors from disk, we can try to cram all our dataset onto the GPU! Now, the issue is that with dense tensors this wouldn't work as they would occupy too much memory. But events are already an efficient format right? So we'll store the events on the GPU as sparse tensors and then simply inflate them by calling to_dense() for each sample. This method is obviously bound by GPU memory so works with rather small datasets such as then one we're testing. However, once you're setup, you can train with _blazing_ speed. Let's have a look!"
+    "We can even go faster! Instead of loading dense tensors from disk, we can try to cram all our dataset onto the GPU! Now, the issue is that with dense tensors this wouldn't work as they would occupy too much memory. But events are already an efficient format right? So we'll store the events on the GPU as sparse tensors and then simply inflate them by calling to_dense() for each sample. This method is obviously bound by GPU memory so works with rather small datasets such as then one we're testing. However, once you're setup, you can train with _blazing_ speed. Let's have a look!\n",
+    "\n",
+    "![Disk caching](images/caching3.png \"Disk caching\")"
    ]
   },
   {
@@ -319,7 +321,7 @@
     "\n",
     "# sparse_tensor_dataloader = DataLoader(sparse_tensor_dataset, batch_size=None, num_workers=0)\n",
     "model = sinabs_model\n",
-    "train_dataloader = disk_cached_dataloader # sparse_tensor_dataloader # sparse_tensor_dataset # \n",
+    "train_dataloader = sparse_tensor_dataset # disk_cached_dataloader # sparse_tensor_dataloader #  \n",
     "# def training():\n",
     "optim = torch.optim.Adam(model.parameters())\n",
     "criterion = torch.nn.functional.cross_entropy\n",
@@ -329,10 +331,10 @@
     "    for data, targets in tqdm(train_dataloader):\n",
     "        sinabs.reset_states(model)\n",
     "        optim.zero_grad()\n",
-    "        data = data.cuda().squeeze()\n",
-    "        targets = targets.cuda()\n",
-    "        # data = data.to_dense()\n",
-    "        # targets = targets.to_dense()\n",
+    "        # data = data.cuda().squeeze()\n",
+    "        # targets = targets.cuda()\n",
+    "        data = data.to_dense()\n",
+    "        targets = targets.to_dense()\n",
     "        output = model(data)\n",
     "        loss = criterion(output.sum(1), targets)\n",
     "        loss.backward()\n",
@@ -371,7 +373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('exodus-test')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -385,12 +387,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c021c926ddd302c6ed51a52d37f274a9ee4bffd9f811c11e9a0b313c48b15ad1"
+    "hash": "caf264bf03997fa53b380c84044763293a7a6f8ebb5555ee5243fd4d1f495be6"
    }
   }
  },
